--- a/theme.toml
+++ b/theme.toml
@@ -1,24 +1,12 @@
-name = "Cactus"
+name = "Windener"
 license = "MIT"
 licenselink = "https://github.com/digitalcraftsman/hugo-cactus-theme/blob/master/License.md"
-description = "A minimalistic and responsive theme for bloggers."
-homepage = "https://github.com/digitalcraftsman/hugo-cactus-theme"
-tags = ["blog", "disqus", "google analytics", "rss", "syntax highlighting"]
-features = ["disqus", "google analytics", "rss", "syntax highlighting", "blog", "pagination", "sharing options"]
-min_version = 0.20
+description = "A personalized theme for blogging"
+homepage = "https://github.com/josephrexme/windener"
+tags = ["blog", "animation", "prism syntax highlighting"]
+features = ["syntax highlighting", "blog", "pagination", "sharing options", "Reading Time", "Read progress"]
+min_version = 0.17
 
 [author]
-  name = "digitalcraftsman"
-  homepage = "//github.com/digitalcraftsman"
-
-[[original]]
-  # Ported the stardard theme of the Cactus for Mac static site generator to Jekyll
-  name = "Nick Balestra"
-  homepage = "http://nick.balestra.ch/"
-  repo = "https://github.com/nickbalestra/kactus"
-
-[[original]]
-  # Original creators of the stardard theme for the Cactus for Mac static site generator
-  name = "Cactus for Mac authors"
-  homepage = "http://cactusformac.com"
-  repo = "https://github.com/koenbok/Cactus"
+  name = "Joseph Rex"
+  homepage = "https://josephrex.me"
