--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,9 +1,9 @@
 # Site settings
 baseurl = "https://example.org/"
-themesDir = "../.."
+themesDir = "../.." # When copied to your root folder use ./themes
 languageCode = "en-us"
-title = "Hugo Cactus Theme"
-theme = "hugo-cactus-theme"
+title = "Windener Theme"
+theme = "windener"
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
 # Disable comments by leaving disqusShortname empty
@@ -13,42 +13,21 @@ disqusShortname = "spf13"
 	name = "John Doe"
 	description = "Describe your website"
 	bio = "Blogger & Programmer"
-	# Enter optionally your twitter account
-	twitter = "Your Twitter account"
+  email = "johndoe@provider.com"
+  profile = "https://about.me/example" # Link to your profile here
 	enableRSS = true
-
-	# Integrate Javascript files or stylesheets by adding the url to the external assets or by
-	# linking local files with their path relative to the static folder, e.g. "css/styles.css"
-	customCSS = []
-	customJS  = []
-
-	# The variables below are optionally too and can be used to
-	# translate or customize each string of the theme.
-
-	# Navigation links
-	home = ""
-	subscribe = ""
-	# Pagination links
-	olderPosts = ""
-	newerPosts = ""
-	readMore = ""
-	copyright = ""
-	# Sharing options and author information in posts
-	aboutAuthor = "I'm an blogger."
-	tweet = ""
-	share = ""
-	# 404 page
-	title404 = ""
-	subtitle404 = ""
-
-	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
-	iconFont = "mono-social"
-    # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
-    socialIconStyle = "circle"
+  favicon = "" # A favicon file located in your static directory
+  logo = "" # Logo located in static directory
 
 # Add additional social link entries underneath
 [social]
-    twitter  = "https://www.twitter.com/"
     facebook = "https://www.facebook.com/"
+    twitter  = "https://www.twitter.com/"
     github   = "https://www.github.com/"
-    dribble  = "https://www.dribbble.com/"
+    dribbble  = "https://www.dribbble.com/"
+    codepen  = "https://www.codepen.io/"
+    behance  = "https://www.behance.net/"
+    stackoverflow  = "https://www.stackoverflow.com/"
+    pinterest  = "https://www.pinterest.com/"
+    instagram  = "https://www.instagram.com/"
+    linkedin  = "https://www.linkedin.com/"
